# openapi.json
@@ -28,13 +28,13 @@
                 "deprecated": false
             }
         },
-        "/api/v1/auth/auth": {
+        "/api/v1/auth": {
             "get": {
                 "tags": [
                     "auth"
                 ],
-                "summary": "AuthUser",
-                "operationId": "ApiV1AuthAuthUser",
+                "summary": "Auth",
+                "operationId": "ApiV1AuthAuth",
                 "responses": {
                     "200": {
                         "description": "Request fulfilled, document follows",
@@ -51,13 +51,34 @@
                 "deprecated": false
             }
         },
-        "/api/v1/auth/delete-profile": {
+        "/api/v1/auth/profile": {
+            "get": {
+                "tags": [
+                    "auth"
+                ],
+                "summary": "Profile",
+                "operationId": "ApiV1AuthProfileProfile",
+                "responses": {
+                    "200": {
+                        "description": "Request fulfilled, document follows",
+                        "headers": {},
+                        "content": {
+                            "application/x-msgpack": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/Profile"
+                                }
+                            }
+                        }
+                    }
+                },
+                "deprecated": false
+            },
             "delete": {
                 "tags": [
                     "auth"
                 ],
                 "summary": "DeleteProfile",
-                "operationId": "ApiV1AuthDeleteProfileDeleteProfile",
+                "operationId": "ApiV1AuthProfileDeleteProfile",
                 "responses": {
                     "204": {
                         "description": "Request fulfilled, nothing follows",
@@ -154,36 +175,13 @@
                 "deprecated": false
             }
         },
-        "/api/v1/auth/profile": {
-            "get": {
-                "tags": [
-                    "auth"
-                ],
-                "summary": "Profile",
-                "operationId": "ApiV1AuthProfileProfile",
-                "responses": {
-                    "200": {
-                        "description": "Request fulfilled, document follows",
-                        "headers": {},
-                        "content": {
-                            "application/x-msgpack": {
-                                "schema": {
-                                    "$ref": "#/components/schemas/Profile"
-                                }
-                            }
-                        }
-                    }
-                },
-                "deprecated": false
-            }
-        },
-        "/api/v1/auth/refresh": {
+        "/api/v1/auth/refresh-tokens": {
             "post": {
                 "tags": [
                     "auth"
                 ],
                 "summary": "Refresh",
-                "operationId": "ApiV1AuthRefreshRefresh",
+                "operationId": "ApiV1AuthRefreshTokensRefresh",
                 "requestBody": {
                     "content": {
                         "application/x-msgpack": {
@@ -312,13 +310,13 @@
                 "deprecated": false
             }
         },
-        "/api/v1/auth/request-reset-code": {
+        "/api/v1/auth/reset-code/request": {
             "post": {
                 "tags": [
                     "auth"
                 ],
                 "summary": "RequestResetCode",
-                "operationId": "ApiV1AuthRequestResetCodeRequestResetCode",
+                "operationId": "ApiV1AuthResetCodeRequestRequestResetCode",
                 "requestBody": {
                     "content": {
                         "application/x-msgpack": {
@@ -463,23 +461,25 @@
                 "deprecated": false
             }
         },
-        "/api/v1/auth/revoke-session": {
-            "post": {
+        "/api/v1/auth/sessions/{session_id}": {
+            "delete": {
                 "tags": [
                     "auth"
                 ],
                 "summary": "RevokeSession",
-                "operationId": "ApiV1AuthRevokeSessionRevokeSession",
-                "requestBody": {
-                    "content": {
-                        "application/x-msgpack": {
-                            "schema": {
-                                "$ref": "#/components/schemas/SessionId"
-                            }
-                        }
-                    },
-                    "required": true
-                },
+                "operationId": "ApiV1AuthSessionsSessionIdRevokeSession",
+                "parameters": [
+                    {
+                        "name": "session_id",
+                        "in": "path",
+                        "schema": {
+                            "type": "string",
+                            "format": "uuid"
+                        },
+                        "required": true,
+                        "deprecated": false
+                    }
+                ],
                 "responses": {
                     "204": {
                         "description": "Request fulfilled, nothing follows",
@@ -527,13 +527,13 @@
                 "deprecated": false
             }
         },
-        "/api/v1/auth/session-list": {
+        "/api/v1/auth/sessions": {
             "get": {
                 "tags": [
                     "auth"
                 ],
                 "summary": "SessionList",
-                "operationId": "ApiV1AuthSessionListSessionList",
+                "operationId": "ApiV1AuthSessionsSessionList",
                 "responses": {
                     "200": {
                         "description": "Request fulfilled, document follows",
@@ -550,13 +550,13 @@
                 "deprecated": false
             }
         },
-        "/api/v1/auth/update-email": {
+        "/api/v1/auth/profile/email": {
             "patch": {
                 "tags": [
                     "auth"
                 ],
                 "summary": "UpdateEmail",
-                "operationId": "ApiV1AuthUpdateEmailUpdateEmail",
+                "operationId": "ApiV1AuthProfileEmailUpdateEmail",
                 "requestBody": {
                     "content": {
                         "application/x-msgpack": {
@@ -614,13 +614,13 @@
                 "deprecated": false
             }
         },
-        "/api/v1/auth/update-password": {
+        "/api/v1/auth/profile/password": {
             "patch": {
                 "tags": [
                     "auth"
                 ],
                 "summary": "UpdatePassword",
-                "operationId": "ApiV1AuthUpdatePasswordUpdatePassword",
+                "operationId": "ApiV1AuthProfilePasswordUpdatePassword",
                 "requestBody": {
                     "content": {
                         "application/x-msgpack": {
@@ -678,13 +678,13 @@
                 "deprecated": false
             }
         },
-        "/api/v1/auth/validate-reset-code": {
+        "/api/v1/auth/reset-code/validate": {
             "post": {
                 "tags": [
                     "auth"
                 ],
                 "summary": "ValidateResetCode",
-                "operationId": "ApiV1AuthValidateResetCodeValidateResetCode",
+                "operationId": "ApiV1AuthResetCodeValidateValidateResetCode",
                 "requestBody": {
                     "content": {
                         "application/x-msgpack": {
@@ -816,13 +816,13 @@
                 "deprecated": false
             }
         },
-        "/api/v1/files/abort-upload/{upload_id}": {
+        "/api/v1/files/upload/{upload_id}/abort": {
             "delete": {
                 "tags": [
                     "file"
                 ],
                 "summary": "AbortUpload",
-                "operationId": "ApiV1FilesAbortUploadUploadIdAbortUpload",
+                "operationId": "ApiV1FilesUploadUploadIdAbortAbortUpload",
                 "parameters": [
                     {
                         "name": "upload_id",
@@ -881,13 +881,13 @@
                 "deprecated": false
             }
         },
-        "/api/v1/files/complete-upload": {
+        "/api/v1/files/upload/complete": {
             "post": {
                 "tags": [
                     "file"
                 ],
                 "summary": "CompleteUpload",
-                "operationId": "ApiV1FilesCompleteUploadCompleteUpload",
+                "operationId": "ApiV1FilesUploadCompleteCompleteUpload",
                 "requestBody": {
                     "content": {
                         "application/x-msgpack": {
@@ -987,8 +987,8 @@
                 "tags": [
                     "file"
                 ],
-                "summary": "DeleteFile",
-                "operationId": "ApiV1FilesDeleteFile",
+                "summary": "DeleteFiles",
+                "operationId": "ApiV1FilesDeleteFiles",
                 "parameters": [
                     {
                         "name": "file_id",
@@ -1201,13 +1201,13 @@
                 "deprecated": false
             }
         },
-        "/api/v1/files/initiate-upload": {
+        "/api/v1/files/upload/initiate": {
             "post": {
                 "tags": [
                     "file"
                 ],
                 "summary": "InitiateUpload",
-                "operationId": "ApiV1FilesInitiateUploadInitiateUpload",
+                "operationId": "ApiV1FilesUploadInitiateInitiateUpload",
                 "requestBody": {
                     "content": {
                         "application/x-msgpack": {
@@ -1569,22 +1569,6 @@
                     "user_id"
                 ],
                 "title": "ResetPassword"
-            },
-            "SessionId": {
-                "properties": {
-                    "session_id": {
-                        "type": "string",
-                        "pattern": "^[a-f0-9]{8}-[a-f0-9]{4}-4[a-f0-9]{3}-[89ab][a-f0-9]{3}-[a-f0-9]{12}$",
-                        "examples": [
-                            "123e4567-e89b-12d3-a456-426614174000"
-                        ]
-                    }
-                },
-                "type": "object",
-                "required": [
-                    "session_id"
-                ],
-                "title": "SessionId"
             },
             "SessionInfo": {
                 "properties": {
